--- a/store/blocks/tablet/screeen/main_slider.jsonc
+++ b/store/blocks/tablet/screeen/main_slider.jsonc
@@ -5,11 +5,9 @@
       "rich-text#title-section-one-tablet",
       "flex-layout.row#home--slider",
       "rich-text#title-section-two-desktop",
-      "flex-layout.row#home--slider-two",
       "rich-text#title-section-two-desktop",
       "flex-layout.row#home--slider",
-      "rich-text#title-section-two-desktop",
-      "flex-layout.row#home--slider-two"
+      "rich-text#title-section-two-desktop"
     ]
   }
 }
