--- a/store/blocks/phone/screen/home/header.jsonc
+++ b/store/blocks/phone/screen/home/header.jsonc
@@ -1,5 +1,5 @@
 {
-    "header-layout.mobile": {
-        "children": ["sticky-layout#mobile"]
-      }
+  "header-layout.mobile": {
+    "children": ["header-row#main-menu-phone", "header-row#menu-icon"]
+  }
 }
