--- a/store/blocks/phone/screen/home/main_slider.jsonc
+++ b/store/blocks/phone/screen/home/main_slider.jsonc
@@ -5,9 +5,11 @@
       "rich-text#title-section-one-phone",
       "flex-layout.row#home--slider",
       "rich-text#title-section-two-desktop",
+      "flex-layout.row#global__main-shelf--container",
       "rich-text#title-section-two-desktop",
       "flex-layout.row#home--slider",
-      "rich-text#title-section-two-desktop"
+      "rich-text#title-section-two-desktop",
+      "flex-layout.row#global__main-shelf--container"
     ]
   }
 }
