--- a/store/blocks/desktop/components/main_header.jsonc
+++ b/store/blocks/desktop/components/main_header.jsonc
@@ -5,6 +5,44 @@
     "props": {}
   },
 
+"flex-layout.row#section-left-menu-logo-search": {
+  "title": "section menu, logo y search",
+  "props": {
+    "horizontalAlign": "center",
+    "verticalAlign": "center",
+    "preventHorizontalStretch": true,
+    "preventVerticalStretch": true,
+    "fullWidth": true,
+    "blockClass": "header-container-menu-desktop-section-one-left"
+  },
+  "children": [
+      "drawer",
+      "flex-layout.col#logo-desktop",
+      "search-bar"
+  ]
+},
+
+"flex-layout.row#section-rigth-information-carButton-login": {
+  "title": "section information, card button y login",
+  "props": {
+    "horizontalAlign": "center",
+    "verticalAlign": "center",
+    "preventHorizontalStretch": true,
+    "preventVerticalStretch": true,
+    "fullWidth": true,
+    "blockClass": "header-container-menu-desktop-section-one-rigth"
+  },
+  "children": [
+     "rich-text#header-trend-information-desktop",
+      "rich-text#header-information-about-collection-month",
+      "rich-text#header-information-about-offers-month",
+      "rich-text#header-information-about-cyber-day",
+      "rich-text#header-information-about-never-say-never",
+      "minicart.v2",
+      "login#header-desktop"
+  ]
+},
+
   "flex-layout.row#desktop-section-one-main-information": {
     "title": "menu showing main information",
     "props": {
@@ -16,16 +54,9 @@
       "blockClass": "header-container-menu-desktop-section-one"
     },
     "children": [
-      "drawer",
-      "flex-layout.col#logo-desktop",
-      "search-bar",
-      "rich-text#header-trend-information-desktop",
-      "rich-text#header-information-about-collection-month",
-      "rich-text#header-information-about-offers-month",
-      "rich-text#header-information-about-cyber-day",
-      "rich-text#header-information-about-never-say-never",
-      "minicart.v2",
-      "login#header-desktop"
+      "flex-layout.row#section-left-menu-logo-search",
+      "flex-layout.row#section-rigth-information-carButton-login"
+
     ]
   },
 
