--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "vtex.store-icons": "0.x",
+    "vtex.product-price": "1.x",
     "vtex.store": "2.x",
     "vtex.store-header": "2.x",
     "vtex.product-summary": "2.x",
@@ -47,7 +48,11 @@
     "vtex.iframe": "0.x",
     "vtex.breadcrumb": "1.x",
     "vtex.sticky-layout": "0.x",
-    "vtex.add-to-cart-button": "0.x"
+    "vtex.add-to-cart-button": "0.x",
+    "vtex.overlay-layout": "0.x"
+  },
+  "peerDependencies": {
+    "vtex.wish-list": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
