--- a/store/blocks/phone/components/home/search.jsonc
+++ b/store/blocks/phone/components/home/search.jsonc
@@ -20,7 +20,7 @@
       "search-bar#header__search--mobile"
     ],
     "props": {
-      "placement": "left",
+      "placement": "right",
       "blockClass": "header__overlayout",
       "transitionComponent": "fadeInLeft"
     }
