--- a/manifest.json
+++ b/manifest.json
@@ -49,7 +49,9 @@
     "vtex.breadcrumb": "1.x",
     "vtex.sticky-layout": "0.x",
     "vtex.add-to-cart-button": "0.x",
-    "vtex.overlay-layout": "0.x"
+    "vtex.overlay-layout": "0.x",
+    "vtex.product-list": "0.x",
+    "vtex.checkout-summary": "0.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x"
