--- a/store/blocks/global/components/main_slider--list-productos.jsonc
+++ b/store/blocks/global/components/main_slider--list-productos.jsonc
@@ -21,13 +21,11 @@
       "blockClass": "custom-slider"
     },
     "children": [
-      "flex-layout.col#second__slider--container",
-      "flex-layout.col#second__slider--container",
-      "flex-layout.col#second__slider--container",
-      "flex-layout.col#second__slider--container",
-      "flex-layout.col#second__slider--container",
-      "flex-layout.col#second__slider--container",
-      "flex-layout.col#second__slider--container",
+      // "flex-layout.col#info-card-row",
+      // "flex-layout.col#info-card-row",
+      // "flex-layout.col#info-card-row",
+      // "flex-layout.col#info-card-row",
+      // "flex-layout.col#info-card-row"
       "flex-layout.col#second__slider--container",
       "flex-layout.col#second__slider--container",
       "flex-layout.col#second__slider--container",
