--- a/store/blocks/global/components/main_shelf_products.jsonc
+++ b/store/blocks/global/components/main_shelf_products.jsonc
@@ -1,6 +1,9 @@
 {
   "flex-layout.row#global__main-shelf--container": {
-    "children": ["list-context.product-list#global__main-shelf"]
+    "children": ["list-context.product-list#global__main-shelf"],
+    "props": {
+      "blockClass": "container-shelf-product"
+    }
   },
  
   "list-context.product-list#global__main-shelf": {
