--- a/store/blocks/phone/components/home/main_rich-text.jsonc
+++ b/store/blocks/phone/components/home/main_rich-text.jsonc
@@ -1,7 +1,7 @@
 {
   "rich-text#title-section-one-phone": {
     "props": {
-      "text": "An amazing product",
+      "text": "An amazing product PHONE",
       "textAlignment": "LEFT",
       "textPosition": "LEFT",
       "font": "lexed",
