--- a/manifest.json
+++ b/manifest.json
@@ -51,7 +51,8 @@
     "vtex.add-to-cart-button": "0.x",
     "vtex.overlay-layout": "0.x",
     "vtex.product-list": "0.x",
-    "vtex.checkout-summary": "0.x"
+    "vtex.checkout-summary": "0.x",
+    "vtex.store-link": "0.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x"
