--- a/store/blocks/global/screen/header.jsonc
+++ b/store/blocks/global/screen/header.jsonc
@@ -1,9 +1,9 @@
 {
     "header": {
-        "blocks": ["header-layout.desktop", "header-layout.mobile"]
+        "blocks": ["header-layout.desktop", "header-layout.mobile", "header-layout.desktop#tablet"]
       },
       "header.full": {
-        "blocks": ["header-layout.desktop", "header-layout.mobile"]
+        "blocks": ["header-layout.desktop", "header-layout.mobile", "header-layout.desktop#tablet"]
       }
 
 }
