--- a/store/blocks/tablet/screeen/header.jsonc
+++ b/store/blocks/tablet/screeen/header.jsonc
@@ -1,5 +1,8 @@
 {
   "header-layout.desktop#tablet": {
-    "children": ["header-row#main-menu-desktop", "header-row#menu-icon"]
+    "children": [
+      "flex-layout.row#tablet_header-menu-info",
+      "flex-layout.row#tablet_menu-icons"
+    ]
   }
 }
