--- a/store/blocks/desktop/components/main_header.jsonc
+++ b/store/blocks/desktop/components/main_header.jsonc
@@ -63,6 +63,7 @@
   },
 
   "flex-layout.col#logo-desktop": {
+    "title": "container logo desktop",
     "props": {
       "verticalAlign": "middle"
     },
