--- a/store/blocks/desktop/screen/main_slider.jsonc
+++ b/store/blocks/desktop/screen/main_slider.jsonc
@@ -3,13 +3,13 @@
     "children": [
       "flex-layout.row#desktop__main-slider",
       "rich-text#title-section-one-desktop",
-      "flex-layout.row#home--slider",
+      "flex-layout.row#desktop-slider-info-card",
       "rich-text#title-section-two-desktop",
-      "flex-layout.row#global__main-shelf--container",
+      "flex-layout.row#desktop_main-shelf",
       "rich-text#title-section-two-desktop",
-      "flex-layout.row#home--slider",
+      "flex-layout.row#desktop-slider-info-card",
       "rich-text#title-section-two-desktop",
-      "flex-layout.row#global__main-shelf--container"
+      "flex-layout.row#desktop_main-shelf"
     ]
   }
 }
