--- a/store/blocks/phone/screen/home/header.jsonc
+++ b/store/blocks/phone/screen/home/header.jsonc
@@ -1,6 +1,7 @@
 {
   "header-layout.mobile": {
-    "children": ["header-row#main-menu-phone",
-    "header-row#menu-icon"]
+    "children": [
+      "header-row#main-menu-phone",
+      "flex-layout.row#phone_header-menu-icons"]
   }
 }
