feat: add new mega menu component and organize the desktop folders

--- a/store/blocks/desktop/screen/main_header.jsonc
+++ b/store/blocks/desktop/screen/main_header.jsonc
@@ -1,5 +1,8 @@
 {
   "header-layout.desktop": {
-    "children": ["header-row#main-menu-desktop", "flex-layout.row#desktop_main-header-icons"]
+    "children": [
+      "header-row#main-menu-desktop",
+      "flex-layout.row#desktop_main-header-icons"
+    ]
   }
 }
