Styles are added to finish the different home views, it is made responsive

--- a/store/blocks/desktop/components/home/rich_text/main_rich-text.jsonc
+++ b/store/blocks/desktop/components/home/rich_text/main_rich-text.jsonc
@@ -18,5 +18,15 @@
       "font": "t-heading-10",
       "blockClass": ["texto-section-two-desktop"]
     }
+  },
+  "rich-text#title-section-three-desktop": {
+    "title": "text section two",
+    "props": {
+      "text": "An amazing product",
+      "textAlignment": "LEFT",
+      "textPosition": "LEFT",
+      "font": "t-heading-10",
+      "blockClass": ["texto-section-three-desktop"]
+    }
   }
 }
