--- a/store/blocks/global/components/shelf_products/main_shelf_products.jsonc
+++ b/store/blocks/global/components/shelf_products/main_shelf_products.jsonc
@@ -23,22 +23,14 @@
   },
   "product-summary.shelf#global__main-summary": {
     "children": [
-      "add-to-list-btn",
+      "flex-layout.row#container-price_salving-add_favorite",
       "flex-layout.col#shelf-image",
       "flex-layout.col#shelf-description",
       "flex-layout.col#shelf-price",
       "flex-layout.row#shelf-button"
     ],
-  
     "props": {
-     
       "showSavingsPercentage": true
-    }
-  },
-
-  "add-to-list-btn": {
-    "props": {
-      "blockClass": "favorite"
     }
   },
   "flex-layout.col#shelf-image": {
@@ -50,6 +42,31 @@
       "blockClass": ["container-shelf-image"]
     }
   },
+  "product-summary-image":{
+    "props": {
+      "showBadge": false
+    }
+  },
+  "flex-layout.row#container-price_salving-add_favorite": {
+    "children": [
+      "product-price-savings",
+      "add-to-list-btn"
+    ],
+    "props": {
+      "blockClass": "container-price_salving-add_favorite"
+    }
+  },
+  "add-to-list-btn": {
+    "props": {
+      "blockClass": "favorite"
+    }
+  },
+  "product-price-savings": {
+    "props": {
+      "message": "{savingsPercentage} OFF"
+    }
+  },
+
   "flex-layout.col#shelf-description": {
     "title": "container description shelf prodcuts",
     "children": [
