--- a/store/blocks/global/screen/header.jsonc
+++ b/store/blocks/global/screen/header.jsonc
@@ -1,9 +1,11 @@
 {
     "header": {
-        "blocks": ["header-layout.desktop", "header-layout.mobile", "header-layout.desktop#tablet"]
+        "blocks": ["header-layout.desktop", "header-layout.desktop#tablet","header-layout.mobile"]
       },
       "header.full": {
-        "blocks": ["header-layout.desktop", "header-layout.mobile", "header-layout.desktop#tablet"]
+        "blocks": ["header-layout.desktop","header-layout.desktop#tablet", "header-layout.mobile"]
       }
 
 }
+
+
